# polymarket-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
app/: config.py  http_app.py  main.py
app/ask/: catalog.py  choice.py  llm.py  schemas.py  service.py  session.py
app/clients/: __init__.py  api.py  credentials.py  errors.py
app/middleware/: __init__.py  structured_response.py
app/schemas/: __init__.py  responses.py
app/tools/: __init__.py  ask.py  health.py  helpers.py  markets.py
app/tools/bridge/: __init__.py  core.py
app/tools/clob/: __init__.py  account.py  history.py  market_data.py  markets.py  trading.py
app/tools/data/: __init__.py  core.py  leaderboards.py  markets.py
app/tools/gamma/: __init__.py  events.py  history.py  markets.py  profiles.py  search.py  series.py  sports.py  tags.py
app/tools/paper/: __init__.py  accounts.py
