[project]
name = "polymarket-mcp"
version = "0.1.0"
description = "Polymarket MCP server"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
]

[tool.fastmcp]
entrypoint = "app.main:mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
